# k8s-fastapi-spark

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  logging.py  main.py
app/config/: default.yaml
kubernetes/spark-jupyter/: Dockerfile
kubernetes/spark-py/: Dockerfile
